--- a/app/src/main/res/layout/activity_main_with_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_main_with_nav_drawer.xml
@@ -22,7 +22,7 @@
         tools:context=".MainActivity">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/nav_toolbar"
+            android:id="@+id/drawer_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
