--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_main_menu"
         android:title="Place an Order" />
     <item
-        android:id="@+id/nav_"
+        android:id="@+id/nav_photo"
         android:icon="@drawable/ic_menu_photo"
         android:title="Take a Photo" />
 </menu>
